Harmonize file open behavior for .pot

BUG: 402890